--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,12 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+.DS_Store
+ferritins_M20/.DS_Store
+ferritins_M20/01_FAMSA_AAs_aln_v1/.DS_Store
+ferritins_M20/02_FAMSA_3dis_aln_v1/.DS_Store
+ferritins_M20/03_USaln_v1/.DS_Store
+ferritins_M20af/.DS_Store
+ferritins_M20af/02_FAMSA_3dis_aln_v1/.DS_Store
+ferritins_M20af/03_USaln_v1/.DS_Store
+ferritins_M20af/align/.DS_Store
